--- a/themes/t4mag/layouts/partials/single/metadata.html
+++ b/themes/t4mag/layouts/partials/single/metadata.html
@@ -7,7 +7,7 @@
         <ul>
             <li>
                 <span class="rt-meta">
-                    by <a href="author.html" class="name">T4Technow</a>
+                    by <a href="{{ .Site.BaseURL }}author.html" class="name">{{ .Site.Params.author }}</a>
                 </span>
             </li>
             <li>
