--- a/themes/t4mag/layouts/partials/scripts.html
+++ b/themes/t4mag/layouts/partials/scripts.html
@@ -19,3 +19,14 @@
     <script src="/js/code-copy.js"></script>
 {{ end }}
 
+<script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register("/service-worker.js")
+      .then((registration) => {
+        console.log("Service worker registration successful, scope is:", registration.scope);
+      })
+      .catch((error) => {
+        console.log("Service worker registration failed, error:", error);
+      });
+    }
+  </script>
