scroll snaping pinned posts

--- a/themes/t4mag/static/css/style.css
+++ b/themes/t4mag/static/css/style.css
@@ -11670,6 +11670,9 @@ pre {
 		overflow-x: auto;
 		scroll-snap-type: x mandatory;
 	}
+	.pinned-mobile::-webkit-scrollbar {
+		display: none;
+	}
 	.pinned-mobile-item {
 		flex-shrink: 0;
 		flex-basis: 100%;
