--- a/themes/t4mag/layouts/partials/scripts.html
+++ b/themes/t4mag/layouts/partials/scripts.html
@@ -1,15 +1,15 @@
 <!-- Dependency Scripts -->
-<script src="/js/jquery.min.js"></script>
-<script src="/js/popper.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/appear.min.js"></script>
-<script src="/js/swiper.min.js"></script>
-<script src="/js/masonry.min.js"></script>
-<script src="/js/magnific-popup.min.js"></script>
-<script src="/js/resize-sensor.min.js"></script>
-<script src="/js/theia-sticky-sidebar.min.js"></script>
-<script src="/js/validator.min.js"></script>
-<script src="/js/tween-max.js"></script>
+<script async src="/js/jquery.min.js"></script>
+<script async src="/js/popper.min.js"></script>
+<script async src="/js/bootstrap.min.js"></script>
+<script async src="/js/appear.min.js"></script>
+<script async src="/js/swiper.min.js"></script>
+<script async src="/js/masonry.min.js"></script>
+<script async src="/js/magnific-popup.min.js"></script>
+<script async src="/js/resize-sensor.min.js"></script>
+<script async src="/js/theia-sticky-sidebar.min.js"></script>
+<script async src="/js/validator.min.js"></script>
+<script async src="/js/tween-max.js"></script>
 <script src="/js/lazysizes.min.js"></script>
 <script src="/js/wow.min.js"></script>
 
