--- a/themes/t4mag/layouts/partials/scripts.html
+++ b/themes/t4mag/layouts/partials/scripts.html
@@ -1,7 +1,7 @@
 <!-- Dependency Scripts -->
 <script async src="/js/jquery.min.js"></script>
-<script async src="/js/popper.min.js"></script>
-<script async src="/js/bootstrap.min.js"></script>
+<script src="/js/popper.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 <script async src="/js/appear.min.js"></script>
 <script async src="/js/swiper.min.js"></script>
 <script async src="/js/masonry.min.js"></script>
